(34, '1.1', 'Self completed online', 0, 4, 0, 1, 1, 1, 0, 'I'),
(35, '2.36', 'Self completion email invitation sent', 10080, 1, 0, 1, 1, 1, 0, 'O');

New sample variable type (Email address):

INSERT INTO `sample_var_type` (`type`, `description`, `table`) VALUES
(8, 'Email address', '');

Specify details of respondent self completion:

ALTER TABLE `questionnaire` ADD `lime_mode` VARCHAR( 64 ) NULL COMMENT 'Limesurvey mode for respondent self completion' AFTER `info` ,
ADD `lime_template` VARCHAR( 128 ) NULL COMMENT 'Limesurvey template for respondent self completion' AFTER `lime_mode` ,
ADD `lime_endurl` VARCHAR( 256 ) NULL COMMENT 'Forwarding end URL for respondent self completion' AFTER `lime_template` ;

queXS 1.6.1 - Changes since 1.6.0

New Feature: Include paradata/metadata in data output (number call attempts, number of answering machine messages and all sample variables)
Fixed Bug: Sample import lists not translatable
Translations updated (Thanks to those who contributed on Launchpad) 

quexs 1.6.0 - Changes since 1.5.4

Major New Feature: Updated to Limesurvey 1.92 Build 120919 last commit a2955e94e254f09b6f31c6c0ca8cf25929ec7e7 on GitHub 13 November 2012
New Feature: Use ADODB from Limesurvey (so no additional ADODB installation required)
New Feature: Access sample variables via the Limesurvey Expression Manager system (using {SAMPLE:xxxx} notation)
New Feature: Make default end URL {ENDINTERVIEWURL}


queXS 1.5.4 - Changes since 1.5.3:

New Feature: Added bulk appointment generator from CSV 
New Feature: Added questionnaire to call history and CSV download option
New Feature: List questionnaires from newest first
New Feature: Added count of outcomes by call attempt
New Feature: Add process_clear_log function to make sure process_log table doesn't get too big
Fixed Bug: Use less memory when exporting CSV call history
Fixed Bug: Fixed timezone assignment in AU database by phone number prefix
Fixed Bug: List questionnaires even if not in default language